--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script type="text/javascript" src="js/enemy.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/bullet.js"></script>
+	<script type="text/javascript" src="js/weapon.js"></script>
+	<script type="text/javascript" src="js/states/menu.js"></script>
+	<script type="text/javascript" src="js/states/game.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -16,251 +19,262 @@
 <body>
 
 <script type="text/javascript">
-
-var game = new Phaser.Game(480, 800, Phaser.CANVAS, '', { preload: preload, create: create, update: update,render: render});
-
-function preload() {
-// game.scale.scaleMode = Phaser.ScaleManager.EXACT_FIT;
-     game.scale.setShowAll();
-    game.scale.setScreenSize();
-  
-    game.load.image('player_bullet', 'assets/bullet.png');
-      game.load.image('enemy_bullet', 'assets/enemy_bullet.png');
-     game.load.image('background', 'assets/sky.png');
-    game.load.image('player_ship', 'assets/spaceship.png');
-   game.load.image('enemy_ship', 'assets/enemy_ship.png');
-
-  //   game.load.spritesheet('bird', 'assets/birdsheet.png',34,24);
-  //   game.load.image('pipe-top','assets/pipe-top.png');
-  //   game.load.image('pipe-bot','assets/pipe-bot.png');
-  //    game.load.image('scoreWall','assets/scoreWall.png');
-  //   game.load.audio('jump', 'assets/jump.ogg'); 
-
-}
+var background;
 var scoreText;
 var score=0;
-var background;
-var player;
-var player_bullets;
-var enemies;
-var enemy_bullets;
-var isRunning=false;
-var timer;
-var spawnTime=1500;
-var playerHealth=5;
-var fpsText;
 
-function create() {
-	//start physics
-	game.world.setBounds(0, 0, 2480, 1100);
-	
-	game.physics.startSystem(Phaser.Physics.ARCADE);
-	//create score
-	
-	
-	
-	//create background
-	var background=game.add.sprite(0, 0, 'background');
-	player=new Player(game);
-	game.add.existing(player);
-	//create player ship
-	// player=game.add.sprite(200,200,'player_ship');
-	// player.anchor.set(0.5);
-	// player.scale.setTo(0.5,0.5);
-	//  game.physics.arcade.enable(player);
-	//  player.health=10;
-	//  player.rateOfFire=250;
-	//  player.lastTimeFired=0;
-	// player.shooting=false;
-	// player.invicibility=0;
+var game = new Phaser.Game(480, 800, Phaser.CANVAS, ''/*, { preload: preload, create: create}*/);
 
-		//create player bullet group
-	player_bullets=game.add.group();
-	//player_bullets.enableBody=true
 
-	//player_bullets.createMultiple(20,'player_bullet');
+game.state.add('menu', menu_state); 
+game.state.add('game', game_state); 
+game.state.start('game');
+
+
+// function preload() {
+// // game.scale.scaleMode = Phaser.ScaleManager.EXACT_FIT;
+//      game.scale.setShowAll();
+//     game.scale.setScreenSize();
+  
+//     game.load.image('player_bullet', 'assets/bullet.png');
+//       game.load.image('enemy_bullet', 'assets/enemy_bullet.png');
+//      game.load.image('background', 'assets/sky.png');
+//     game.load.image('player_ship', 'assets/spaceship.png');
+//    game.load.image('enemy_ship', 'assets/enemy_ship.png');
+
+//   //   game.load.spritesheet('bird', 'assets/birdsheet.png',34,24);
+//   //   game.load.image('pipe-top','assets/pipe-top.png');
+//   //   game.load.image('pipe-bot','assets/pipe-bot.png');
+//   //    game.load.image('scoreWall','assets/scoreWall.png');
+//   //   game.load.audio('jump', 'assets/jump.ogg'); 
+
+// }
+// var scoreText;
+// var score=0;
+// var background;
+// var player;
+// var player_bullets;
+// var enemies;
+// var enemy_bullets;
+// var isRunning=false;
+// var timer;
+// var spawnTime=1500;
+// var playerHealth=5;
+// var fpsText;
+
+
+// function create() {
+// 	//start physics
+// 	game.world.setBounds(0, 0, 2480, 1100);
 	
-	//create player invisible line 
-	invisible_line=game.add.sprite(0,0);
-	invisible_line.scale.y=800;
+// 	game.physics.startSystem(Phaser.Physics.ARCADE);
+// 	//create score
 	
-	game.physics.arcade.enable(invisible_line);
-	//create enemy ship group
-	enemies=game.add.group();
-	//enemies.enableBody=true;
-	//enemies.createMultiple(20,'enemy_ship');
-	//assign rate of fire to control how many times per second the enemies will shoot the player
-	//enemies.setAll('rateOfFire',250,false,false,0,true);
-	//enemies.setAll('lastTimeFired',0,false,false,0,true);
-	//enemy spawn timer 
-	timer=game.time.events.loop(spawnTime, addEnemy, this);
-	//create enemy bullet group
-	enemy_bullets=game.add.group();
-	// enemy_bullets.enableBody=true;
-	// enemy_bullets.createMultiple(200,'');
 	
-	//create sounds for firing ,damage and death
-	//create music
-	//create life bar
-	//score 
-	scoreText = game.add.text(16, 16, 'Score: 0', { fontSize: '32px', fill: '#000' });
-	//fps
-	  game.time.advancedTiming = true;
-   		fpsText = this.game.add.text(
-        20, 20, '', { font: '16px Arial', fill: '#ffffff' }
-    );
+// 	//create background
+// 	var background=game.add.sprite(0, 0, 'background');
+	
+// 	//create player ship
+// 	player=new Player(game);
+// 	game.add.existing(player);
+
+	
+	
+
+// 		//create player bullet group
+// 	player_bullets=game.add.group();
+// 	//player_bullets.enableBody=true
+
+// 	//player_bullets.createMultiple(20,'player_bullet');
+	
+// 	//create player invisible line 
+// 	invisible_line=game.add.sprite(0,0,'enemy_bullet');
+// 	invisible_line.scale.y=800;
+	
+// 	game.physics.arcade.enable(invisible_line);
+// 	//create enemy ship group
+// 	enemies=game.add.group();
+	
+// 	//enemy spawn timer 
+// 	timer=game.time.events.loop(spawnTime, addEnemy, this);
+// 	//create enemy bullet group
+// 	enemy_bullets=game.add.group();
+// 	// enemy_bullets.enableBody=true;
+// 	// enemy_bullets.createMultiple(200,'');
+	
+// 	//create sounds for firing ,damage and death
+// 	//create music
+// 	//create life bar
+// 	//score 
+// 	scoreText = game.add.text(16, 16, 'Score: 0', { fontSize: '32px', fill: '#000' });
+// 	//fps
+// 	  game.time.advancedTiming = true;
+//    		fpsText = this.game.add.text(
+//         20, 20, '', { font: '16px Arial', fill: '#ffffff' }
+//     );
   
     
-}
+// }
 
-function update() {
-scoreText.text = 'Score: ' + score; 
+// function update() {
+// scoreText.text = 'Score: ' + score; 
 
-if (game.time.fps !== 0) {
-        fpsText.setText(game.time.fps + ' FPS');
-    }
-      //  If the sprite is > 8px away from the pointer then let's move to it
+// if (game.time.fps !== 0) {
+//         fpsText.setText(game.time.fps + ' FPS');
+//     }
+//       //  If the sprite is > 8px away from the pointer then let's move to it
 
-    if (game.physics.arcade.distanceToPointer(player, game.input.activePointer) > 8)
-    {
-        //  Make the object seek to the active pointer (mouse or touch).
-        game.physics.arcade.moveToPointer(player, 300);
-        invisible_line.x=player.x;
-    }
-    else
-    {
-        //  Otherwise turn off velocity because we're close enough to the pointer
-        player.body.velocity.set(0);
-    }
+//     if (game.physics.arcade.distanceToPointer(player, game.input.activePointer) > 8)
+//     {
+//         //  Make the object seek to the active pointer (mouse or touch).
+//         game.physics.arcade.moveToPointer(player, 300);
+//         invisible_line.x=player.x;
+//     }
+//     else
+//     {
+//         //  Otherwise turn off velocity because we're close enough to the pointer
+//         player.body.velocity.set(0);
+//     }
 
-    if(player.shooting){
-    	playerShoot();
-    }else{
-    	playerStopShoot();
-    }
- //check for overlap between player ship - enemy bullets  and calculate damage 
-  game.physics.arcade.overlap(enemy_bullets, player, playerDamaged, null, this);
- //check for overlap between player ship - enemy ship and calculate damage
- game.physics.arcade.overlap(player, enemies, enemyTouched, null, this)
- //check for overlap between enemy ship - player bullets and calculate score and damage (call enemyDamaged)
- game.physics.arcade.overlap(enemies, player_bullets, enemyDamaged, null, this);
- //check for overlap between enemy ship and invisible line drawn from the player. If it overlaps, enemy shoots
- game.physics.arcade.overlap(enemies, invisible_line, enemyShoot, null, this);
-//controls
+//     if(player.shooting){
+//     	playerShoot();
+//     }else{
+//     	playerStopShoot();
+//     }
+//  //check for overlap between player ship - enemy bullets  and calculate damage 
+//   game.physics.arcade.overlap(enemy_bullets, player, playerDamaged, null, this);
+//  //check for overlap between player ship - enemy ship and calculate damage
+//  game.physics.arcade.overlap(player, enemies, enemyTouched, null, this)
+//  //check for overlap between enemy ship - player bullets and calculate score and damage (call enemyDamaged)
+//  game.physics.arcade.overlap(enemies, player_bullets, enemyDamaged, null, this);
+//  //check for overlap between enemy ship and invisible line drawn from the player. If it overlaps, enemy shoots
+//  game.physics.arcade.overlap(enemies, invisible_line, enemyShoot, null, this);
+// //controls
 
-		game.input.onDown.add(playerShoot, this);
-		game.input.onUp.add(playerStopShoot,this);
+// 		game.input.onDown.add(playerShoot, this);
+// 		game.input.onUp.add(playerStopShoot,this);
 
-}
+// }
 
-function render(){
+// function render(){
 
    
-}
+// }
 
 
-function addEnemy(){
+// function addEnemy(){
 	
-	var enemy=new Enemy(game);
-	enemies.add(enemy);
+// 	var enemy=new Enemy(game);
+// 	enemies.add(enemy);
 	   
-	//enemy.rateOfFire=250;
+// 	//enemy.rateOfFire=250;
 
-	// enemy=enemies.getFirstDead();
-	//  enemy.reset(x,y);
-	//  enemy.health=3;
-	// enemy.body.velocity.y=40;
-	// enemy.checkWorldBounds=true;
- //     enemy.outOfBoundsKill= true;
+// 	// enemy=enemies.getFirstDead();
+// 	//  enemy.reset(x,y);
+// 	//  enemy.health=3;
+// 	// enemy.body.velocity.y=40;
+// 	// enemy.checkWorldBounds=true;
+//  //     enemy.outOfBoundsKill= true;
 	
-}
-function playerDamaged(player,bullet){
-	bullet.kill();
+// }
+// function playerDamaged(player,bullet){
+// 	bullet.kill();
 	
-	//player.damage(1); 
-	if (!player.alive){
-		invisible_line.kill();
-	}
-	//console.log(player);
-	//calculate how much damage the player took 
-	//call removeLife if needed
-}
+// 	player.damage(bullet.damage); 
+// 	console.log(bullet.damage);
+// 	if (!player.alive){
+// 		invisible_line.kill();
+// 	}
+// 	//console.log(player);
+// 	//calculate how much damage the player took 
+// 	//call removeLife if needed
+// }
 
-function enemyTouched(player,enemy){
+// function enemyTouched(player,enemy){
 
-	//damage enemy for spesific amount
-	enemy.damage(1);
-	//damage player for specific amount 
-	//player.damage(1)
-	//console.log('touched')
-	//call removeLife if needed
+// 	//damage enemy for spesific amount
+// 	enemy.damage(1);
+// 	//damage player for specific amount 
+// 	player.damage(1)
+// 	//console.log('touched')
+// 	//call removeLife if needed
 
-}
-function enemyDamaged(enemy,bullet){
+// }
+// function enemyDamaged(enemy,bullet){
 
-	bullet.kill();
-	//console.log('hit');
-	//console.log(enemy);
-	enemy.damage(1);
-	score++;
-//calculate how much damage the enemy took 
-//destroy enemy if needed
-//increase score
+// 	bullet.kill();
+// 	//console.log('hit');
+// 	//console.log(enemy);
 
-}
-
-function playerShoot(){
-	player.shooting=true;
-	if (player.alive && player.lastTimeFired < game.time.now - player.rateOfFire) {
-			//console.log('player shoot');
-
-		var bullet=new Bullet(game,player.x,player.y-82,'player')
-		// bullet.checkWorldBounds=true;
-		// bullet.outOfBoundsKill= true;
-		// bullet.reset(player.x,player.y-82);
-		// bullet.body.velocity.y=-400;
-		player_bullets.add(bullet);
-		player.lastTimeFired=game.time.now;
-	}
-}
-function playerStopShoot(){
-	player.shooting=false;
-}
-function enemyShoot(x,enemy){
+// 	//damage enemy
+// 	enemy.damage(bullet.damage);
 	
- if (enemy.lastTimeFired < game.time.now - enemy.rateOfFire) {
- 	if(enemy_bullets.countDead()==0){
+// //increase score
+// score+=player.weapon.damage;
 
-	var bullet=new Bullet(game,enemy.x+40,enemy.y+59,'enemy')
-// var bullet=enemy_bullets.getFirstDead();
-// bullet.checkWorldBounds=true;
-// bullet.outOfBoundsKill= true;
-// bullet.reset(enemy.x+40,enemy.y+59);
-// bullet.body.velocity.y=400;
-	enemy_bullets.add(bullet)
-}else{
-	var bullet=enemy_bullets.getFirstDead();
-	bullet.reset(game,enemy.x+40,enemy.y+59,'enemy');
-	bullet.checkWorldBounds=true;
-    bullet.outOfBoundsKill= true;
-}
-    enemy.lastTimeFired = game.time.now;
-    console.log('dead enemy bullets');
-    console.log(enemy_bullets.countLiving());
-  }
+// }
 
-}
+// function playerShoot(){
+// 	player.shooting=true;
+// 	if (player.alive && player.lastTimeFired < game.time.now - player.weapon.rateOfFire) {
+// 			console.log('player shoot');
 
-function removeLife(){
+// 		var bullet=new Bullet(game,player.x,player.y-82,'player')
+// 		bullet.damage=player.weapon.damage;
+// 		// bullet.checkWorldBounds=true;
+// 		// bullet.outOfBoundsKill= true;
+// 		// bullet.reset(player.x,player.y-82);
+// 		// bullet.body.velocity.y=-400;
+// 		player_bullets.add(bullet);
+// 		player.lastTimeFired=game.time.now;
 
-//remove a life 
-//check if any life left else gameover
+// 	}
+// }
+// function playerStopShoot(){
+// 	player.shooting=false;
+// }
+// function enemyShoot(x,enemy){
+	
+//  if (enemy.lastTimeFired < game.time.now - enemy.weapon.rateOfFire) {
+//  	if(enemy_bullets.countDead()==0){
+//  	//	console.log('new bullet');
+// 		var bullet=new Bullet(game,enemy.x+40,enemy.y+59,'enemy')
+// 		// var bullet=enemy_bullets.getFirstDead();
+// 		bullet.checkWorldBounds=true;
+// 		bullet.outOfBoundsKill= true;
+// 		bullet.damage=enemy.weapon.damage;
+// 		// bullet.reset(enemy.x+40,enemy.y+59);
+// 			// bullet.body.velocity.y=400;
+// 	enemy_bullets.add(bullet)
+// 	 }else{
+// 		var bullet=enemy_bullets.getFirstDead();
+// 	 	bullet.reset(enemy.x+40,enemy.y+59,'enemy');
+// 	 	bullet.body.velocity.y=400;
+	 	
+// 	// 	  game.physics.arcade.enable(bullet);
+// 	// 	bullet.body.velocity=400;
+// 		bullet.checkWorldBounds=true;
+// 	    bullet.outOfBoundsKill= true;
+// 	    bullet.damage=enemy.weapon.damage;
+// 	//     console.log('old bullet');
+// 	 }
+// 	    enemy.lastTimeFired = game.time.now;
+// 	    // console.log('alive enemy bullets: '+ enemy_bullets.countLiving());
+// 	    // console.log('dead enemy bullets: '+ enemy_bullets.countDead());
+// 	  }
 
-}
+// }
 
-function gameOver(){
+// function removeLife(){
 
-}
+// //remove a life 
+// //check if any life left else gameover
+
+// }
+
+// function gameOver(){
+
+// }
 
 </script>
 
