--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Space shooter with the phaser engine</title>
 	<script type="text/javascript" src="js/phaser.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
+	<script type="text/javascript" src="js/powerup.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/bullet.js"></script>
 	<script type="text/javascript" src="js/weapon.js"></script>
+	<script type="text/javascript" src="js/hud.js"></script>
 	<script type="text/javascript" src="js/states/menu.js"></script>
 	<script type="text/javascript" src="js/states/game.js"></script>
+    
     <style type="text/css">
+
         body {
             margin: 0;
         }
