--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ var text;
     
  
 
-  game.load.audio('shoot', 'assets/sound/Laser1.wav');
+  game.load.audio('shoot', 'assets/sound/laser1.wav');
   game.load.audio('game_music_1', 'assets/sound/game_music_1.ogg');
   game.load.audio('gameover', 'assets/sound/gameover.ogg');
   game.load.audio('menu_music','assets/sound/menu_music.ogg');
