--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@ function isDecoded(){
 
 <p>A space shooter using phaser</p>
 
-<p>Currently under construction. May or may not work.</p>
+<p>This is my first game i released on public as a part of my effort to join ideology of http://www.onegameamonth.com/</p>
+<p> The game is a simple shooter, with a few enemies and a boss. Nothing complete here!<br>
+  But i learn so much by doing this </p>
 
 <div id='game'></div>
         </section>
