--- a/index.html
+++ b/index.html
@@ -139,14 +139,12 @@ function isDecoded(){
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="spaceshooter" class="anchor" href="#spaceshooter"><span class="octicon octicon-link"></span></a>SpaceShooter</h1>
 
-<p>A space shooter using phaser</p>
 
-<p>This is my first game i released on public as a part of my effort to join ideology of http://www.onegameamonth.com/</p>
-<p> The game is a simple shooter, with a few enemies and a boss. Nothing complete here!<br>
-  But i learn so much by doing this </p>
+<p>This is my first game i released in public as a part of my effort to join the ideology of 
+    <a href="http://www.onegameamonth.com/">#onegamepermonth</a></p>
+<p> The game is a simple shooter, with a few enemies and a boss. Nothing special or complete here!<br>
+  But i learned so much by doing this! </p>
 
 <div id='game'></div>
         </section>
