--- a/index.html
+++ b/index.html
@@ -134,10 +134,12 @@ function isDecoded(){
           <a href="https://github.com/j0hnskot/SpaceShooter/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
           <a href="https://github.com/j0hnskot/SpaceShooter/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/j0hnskot/SpaceShooter" id="view-on-github" class="button"><span>View on GitHub</span></a>
+
         </section>
 
         <hr>
-
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="j0hnskot">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> <br>
         <section id="main_content">
 
 
@@ -147,6 +149,7 @@ function isDecoded(){
   But i learned so much by doing this! </p>
 
 <div id='game'></div>
+
         </section>
 
         <footer>
