--- a/index.html
+++ b/index.html
@@ -3,130 +3,37 @@
 <head> 
 	<meta charset="UTF-8" />
     <title>Space shooter with the phaser engine</title>
-	<script type="text/javascript" src="js/lib/phaser.min.js"></script>
-	<script type="text/javascript" src="js/enemy.js"></script>
-	<script type="text/javascript" src="js/powerup.js"></script>
-	<script type="text/javascript" src="js/player.js"></script>
-	<script type="text/javascript" src="js/bullet.js"></script>
-	<script type="text/javascript" src="js/weapon.js"></script>
-	<script type="text/javascript" src="js/hud.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/2.2.2/phaser.js"></script>
+
+
+	<script type="text/javascript" src="js/states/boot.js"></script>
+	<script type="text/javascript" src="js/states/preload.js"></script>
 	<script type="text/javascript" src="js/states/menu.js"></script>
 	<script type="text/javascript" src="js/states/game.js"></script>
 	<script type="text/javascript" src="js/states/shop.js"></script>
 	<script type="text/javascript" src="js/states/credits.js"></script>
 
-    
-    <style type="text/css">
+	<script type="text/javascript" src="js/gameObj/enemy.js"></script>
+	<script type="text/javascript" src="js/gameObj/powerup.js"></script>
+	<script type="text/javascript" src="js/gameObj/player.js"></script>
+	<script type="text/javascript" src="js/gameObj/bullet.js"></script>
+	<script type="text/javascript" src="js/gameObj/weapon.js"></script>
+	<script type="text/javascript" src="js/hud.js"></script>
 
-        body {
-            margin: 0;
-        }
-    </style>
+
 </head>
 <body>
 
 <script type="text/javascript">
-var background;
-var scoreText;
-var score=0;
-var menu_music;
-var preloadSprite=null;
 
-var game = new Phaser.Game(480, 800, Phaser.CANVAS, '',  {preload: preload, create: create});
+	var game = new Phaser.Game(480, 800, Phaser.CANVAS, '');
 
-function preload(){
+	game.state.add('boot', SpaceShooter.States.Boot);
+	game.state.add('preload', SpaceShooter.States.Preload);
+	game.state.add('menu', SpaceShooter.States.Menu);
+	game.state.add('game', SpaceShooter.States.Game);
 
-var text;	
-		game.scale.setShowAll();
-    game.scale.setScreenSize();
-  
-   game.load.image('load','assets/load.png');
-   game.load.onFileComplete.add(function(q){
-   	if(preloadSprite==null){
-   	preloadSprite=game.add.image(game.width/2,game.height/2,'load');
-   	preloadSprite.anchor.set(0.5);
-   	text=game.add.text(game.width/2,game.height/2+100,'Loading..',{fontSize:'32px',fill:'#ffffff'});
-   	text.anchor.set(0.5);
-   }
-  	
-
-   	preloadSprite.width=q*4;
-   	});
-  	
-    
- 
-
- 	game.load.audio('shoot', 'assets/sound/Laser1.wav');
-	game.load.audio('game_music_1', 'assets/sound/game_music_1.ogg');
-	game.load.audio('gameover', 'assets/sound/gameover.ogg');
-	game.load.audio('menu_music','assets/sound/menu_music.ogg');
-	game.load.audio('explosion','assets/sound/explosion2.wav');
-
-    game.load.image('powerup', 'assets/powerup.png');
-    game.load.image('window','assets/menu/window.png');
-  	game.load.image('close_button','assets/menu/close_button.png');
-	game.load.image('shop_button','assets/shop_button.png');
-	game.load.image('credits_button','assets/credits_button.png');
-	game.load.image('buy_button','assets/buy_button.png');
-	game.load.image('equip_button','assets/equip_button.png');
-	game.load.image('equipped_button','assets/equipped_button.png');
-	game.load.image('typeZero','assets/typeZero.png');
-	game.load.image('typeOne','assets/typeOne.png');
-	game.load.image('typeTwo','assets/typeTwo.png');
-    game.load.image('player_bullet', 'assets/player_bullet.png');
-	game.load.image('player_bullet_fast', 'assets/player_bullet_fast.png');
-	game.load.image('enemy_bullet', 'assets/enemy_bullet.png');
-	game.load.image('background', 'assets/background.png');
-	game.load.image('background_layer_2', 'assets/background_layer_2.png');
-	game.load.image('explosion0', 'assets/explosion0.png');
-	game.load.image('explosion1', 'assets/explosion1.png');
-	game.load.image('explosion2', 'assets/explosion2.png');
-	game.load.image('start_game_button','assets/start_game_button.png');
-	game.load.image('restart_game_button','assets/restart_game_button.png');
-	game.load.image('window', 'assets/menu/window.png');
-	game.load.image('menu_button', 'assets/menu_button.png');
-	game.load.image('player_ship', 'assets/spaceship.png');
-	game.load.image('shield', 'assets/shield.png');
-	game.load.image('invicibility', 'assets/invicibility.png');
-	game.load.image('lowHealth', 'assets/lowHealth.png');
-   	game.load.image('enemy_ship', 'assets/enemy_ship.png');
-	game.load.image('enemy_ship_2', 'assets/enemy_ship_2.png');
-	game.load.image('enemy_ship_3', 'assets/enemy_ship_3.png');
-	game.load.image('enemy_ship_4', 'assets/enemy_ship_4.png');
-	game.load.image('enemy_ship_5', 'assets/enemy_ship_5.png');
-	game.load.image('boss_1', 'assets/boss_1.png');
-    game.load.image('menu_background_layer_1','assets/menu/menu_background_layer_1.png');
-    game.load.image('menu_background_layer_2','assets/menu/menu_background_layer_2.png');
-	game.load.image('start_game_button','assets/start_game_button.png');
-	game.load.image('back_button','assets/back_button.png');
-	game.load.image('title','assets/title.png')
-
-
-	
-}
-function create(){
-menu_music=game.add.audio('menu_music');
-
-
-var timer = game.time.create();
-	 timer.loop(500,isDecoded, this);
-		timer.start();
-game.state.add('menu', menu_state); 
-game.state.add('game', game_state); 
-
-//game.state.start('menu');	
-}
-
-function isDecoded(){
-	if(menu_music.isDecoded){
-			preloadSprite.kill()
-		game.state.start('menu');
-
-	}
-}
-
-
-
+	game.state.start('boot');
 
 </script>
 
